﻿GZipStream.cs: 
	Length property (Line 712): 

			public override long Length
			{
				get { throw new NotImplementedException(); }
			}

	Changed to: 

			public override long Length
			{
				get { return -1; }
			}
	
	To avoid break into the debugger every time. 