@@ -1,0 +1,70 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{FFAD2217-0B38-493C-9460-3660345B7B8B}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>MyToolkit.Metro</RootNamespace>
+    <AssemblyName>MyToolkit.Metro</AssemblyName>
+    <DefaultLanguage>en-US</DefaultLanguage>
+    <FileAlignment>512</FileAlignment>
+    <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;METRO</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Content Include="Libraries\DotNetZip\Changes.txt" />
+    <Content Include="Libraries\DotNetZip\License.zlib.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Collections\FilteredObservableCollection.cs" />
+    <Compile Include="Collections\OrderedObservableCollection.cs" />
+    <Compile Include="Libraries\DotNetZip\CRC32.cs" />
+    <Compile Include="Libraries\DotNetZip\Deflate.cs" />
+    <Compile Include="Libraries\DotNetZip\GZipStream.cs" />
+    <Compile Include="Libraries\DotNetZip\Inflate.cs" />
+    <Compile Include="Libraries\DotNetZip\InfTree.cs" />
+    <Compile Include="Libraries\DotNetZip\Tree.cs" />
+    <Compile Include="Libraries\DotNetZip\Zlib.cs" />
+    <Compile Include="Libraries\DotNetZip\ZlibBaseStream.cs" />
+    <Compile Include="Libraries\DotNetZip\ZlibCodec.cs" />
+    <Compile Include="Libraries\DotNetZip\ZlibConstants.cs" />
+    <Compile Include="Messages\ActionMessage.cs" />
+    <Compile Include="Messages\Messenger.cs" />
+    <Compile Include="Messages\TextMessage.cs" />
+    <Compile Include="MVVM\NotifyPropertyChanged.cs" />
+    <Compile Include="MVVM\RelayCommand.cs" />
+    <Compile Include="Network\Http.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\WeakEvent.cs" />
+    <Compile Include="Utilities\Xml.cs" />
+  </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v1.0\Microsoft.Windows.UI.Xaml.CSharp.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
+</Project>
