@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 12.00
+# Visual Studio 11 Express for Windows 8
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MyToolkit.Metro", "MyToolkit.Metro.csproj", "{FFAD2217-0B38-493C-9460-3660345B7B8B}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Any CPU = Debug|Any CPU
+		Release|Any CPU = Release|Any CPU
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{FFAD2217-0B38-493C-9460-3660345B7B8B}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{FFAD2217-0B38-493C-9460-3660345B7B8B}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{FFAD2217-0B38-493C-9460-3660345B7B8B}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{FFAD2217-0B38-493C-9460-3660345B7B8B}.Release|Any CPU.Build.0 = Release|Any CPU
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
